# gh-project-scaffold

./: .gitignore  README.md
github-project-ops/: SKILL.md
github-project-ops/agents/: openai.yaml
github-project-ops/assets/templates/: AGENTS.md  CHANGELOG.md  CONTRIBUTING.md  LICENSE-MIT.txt  README.private.md  README.public.md  SECURITY.md  pyproject.toml
github-project-ops/assets/templates/.github/: pull_request_template.md
github-project-ops/assets/templates/.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
github-project-ops/assets/templates/.github/workflows/: ci.yml  release.yml
github-project-ops/references/: github-actions.md  python-defaults.md  repo-standards.md
github-project-ops/scripts/: validate_scaffold.py
tests/: test_github_project_ops_repo.py
